# FocusEngine

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
.github/workflows/: android-apk.yml  keepalive.yml  pages.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  auth.py  config.py  deps.py
apps/api/app/db/: __init__.py  base.py  engine.py
apps/api/app/domain/: __init__.py
apps/api/app/domain/focus/: __init__.py  controller.py  errors.py  events.py  manager.py  ports.py  timer.py
apps/api/app/models/: __init__.py  focus.py  goals.py  project.py  review.py  sync.py  task.py  user.py
apps/api/app/routers/: __init__.py  auth.py  focus.py  insights.py  me.py  sync.py  tasks.py
apps/api/app/schemas/: __init__.py  base.py  due.py  enums.py  focus.py  goals.py  hlc.py  nlp.py  project.py  recurrence.py  review.py  sync.py  task.py  user.py
apps/api/app/services/: __init__.py  recurrence.py  sync.py  tasks.py
apps/api/tests/: conftest.py  test_api.py  test_auth.py  test_focus_controller.py  test_multiuser.py  test_recurrence.py  test_schemas.py  test_sync_merge.py
apps/mobile/: .gitignore  README.md  capacitor.config.ts  package.json  tsconfig.json
apps/mobile/android/: capacitor.settings.gradle
apps/mobile/android/app/: build.gradle
apps/mobile/src/: native.ts
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/out-placeholder/: index.html
docs/: ARCHITECTURE.md  DESIGN_SPEC.md  SYNC_STRATEGY.md  V2_ADDENDUM.md
(+58 files in other folders)
