[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "focusengine-api"
version = "0.1.0"
description = "FocusEngine backend — FastAPI + Pydantic v2 + SQLAlchemy 2.0 (async/SQLite)."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.7",
    "pydantic-settings",
    "sqlalchemy>=2.0",
    "aiosqlite",
    "greenlet",
    "pyjwt>=2.8",
    "google-auth>=2.28",
    "requests>=2.31",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    # Starlette 1.3.x deprecates its httpx-backed TestClient in favour of a
    # future `httpx2` transport that is not yet released/usable. Third-party,
    # test-only transport deprecation with zero production impact (TestClient
    # never ships in the app). Ignored by exact message (not a blanket ignore)
    # so any other warning still surfaces. Root-caused in T5: it is a
    # UserWarning subclass, NOT a naive-datetime DeprecationWarning.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
